Add basic SEIR model that runs for each of the three countries

--- a/notebooks/seir_model.ipynb
+++ b/notebooks/seir_model.ipynb
@@ -21,11 +21,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d25c9c93-db55-4a04-b1dd-522727309b4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iso = 'PHL'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8ebb562f-4915-4755-a698-3592eefdd456",
    "metadata": {},
    "outputs": [],
    "source": [
-    "iso = 'VNM'\n",
     "cases_data = pd.read_csv(PROJECT_PATH / 'data/new_cases.csv', index_col=0)[iso]\n",
     "cases_data.index = pd.to_datetime(cases_data.index)\n",
     "approx_pops = {\n",
@@ -42,8 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "analysis_start_date = datetime(2020, 9, 1) \n",
-    "analysis_end_date = datetime(2022, 1, 1)\n",
+    "analysis_start_date = datetime(2021, 8, 1) \n",
+    "analysis_end_date = datetime(2022, 6, 1)\n",
     "epi_model = CompartmentalModel(\n",
     "    [analysis_start_date, analysis_end_date],\n",
     "    ['susceptible', 'exposed', 'infectious', 'recovered'],\n",
@@ -61,29 +70,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd3b5406-f6b0-4685-9b97-5237553b1009",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "contact_rates = {\n",
-    "    'MYS': 0.3,\n",
-    "    'PHL': 0.28,\n",
-    "    'VNM': 0.2,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "de7eec55-c205-4960-b2df-b6bef6bf11ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "parameters = {\n",
-    "    'contact_rate': contact_rates[iso],\n",
+    "    'contact_rate': 0.4,\n",
     "    'incubation_period': 5.0,\n",
     "    'infectious_period': 5.0,\n",
-    "    'detection_prop': 0.1,\n",
+    "    'detection_prop': 0.07,\n",
     "}\n",
     "epi_model.run(parameters)"
    ]
@@ -95,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_start_date = datetime(2021, 3, 1)\n",
+    "plot_start_date = datetime(2021, 10, 1)\n",
     "comparison_df = pd.concat([epi_model.get_derived_outputs_df(), cases_data])\n",
     "comparison_df.columns = ['modelled', 'reported']\n",
     "comparison_plot = comparison_df.plot()\n",
