Attempt preamble for notebook to run on Colab

--- a/notebooks/seir_model.ipynb
+++ b/notebooks/seir_model.ipynb
@@ -3,6 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4bdd5631-a120-4ba1-aa1c-cfade7ca4078",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    import google.colab\n",
+    "    ! git clone https://github.com/monash-emu/WPRO_wip.git --branch main\n",
+    "    %cd WPRO_wip\n",
+    "    %pip install -e ./\n",
+    "except:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2ee518db-c746-4aef-ad20-e01c95431d0c",
    "metadata": {},
    "outputs": [],
