Add documentation to simple model notebook

--- a/notebooks/seir_model.ipynb
+++ b/notebooks/seir_model.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8c291c2c-53bd-4715-bd90-5ddfe8f876ee",
+   "metadata": {},
+   "source": [
+    "### Standard preamble\n",
+    "Please run the following three cells to get the environment set up \n",
+    "and the necessary packages installed.\n",
+    "After running the first cell, you will need to \"Restart Runtime\"\n",
+    "as per the message prompt that will appear.\n",
+    "After that, proceed to run the second and third code cells below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "902adde5-a16b-466b-a5dd-e3d3a6e245de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip uninstall numba -y\n",
+    "!pip uninstall librosa -y\n",
+    "!pip install estival==0.4.9 numpy==1.24.3 kaleido"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4bdd5631-a120-4ba1-aa1c-cfade7ca4078",
@@ -32,13 +57,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7a864e4-8072-4f55-8b81-c93dec5cc98c",
+   "metadata": {},
+   "source": [
+    "## Model construction and execution\n",
+    "The following cells constitute the epidemiological analysis of this notebook.\n",
+    "The code is intended to be very simple and adaptable.\n",
+    "Please feel free to adjust any of the data sources or parameters,\n",
+    "which is the purpose of this notebook.\n",
+    "### Country selection\n",
+    "First choose your country using it's ISO code,\n",
+    "with options only available for Malaysia, the Philippines and Vietnam.\n",
+    "This will determine the Our World in Data (OWID) case data \n",
+    "that can be used to compare your model results against.\n",
+    "You can use our approximate estimate of the total population of the country,\n",
+    "or replace the value as per your preference.\n",
+    "### Dates\n",
+    "Feel free to edit the datetime objects that specify \n",
+    "the start and end dates for the analysis, the reference (\"zero\") date\n",
+    "and the left limit for the x-axis in the final plot.\n",
+    "### Model\n",
+    "The model is a parameterised summer2 SEIR model \n",
+    "with frequency-dependent transmission and \n",
+    "partial observation of incidence (termed notifications).\n",
+    "### Results\n",
+    "The SEIR model provides a poor-to-moderate fit to the target data \n",
+    "for the Omicron waves in each of the three countries.\n",
+    "Please adjust parameters and dates to achieve a better fit for your country."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d25c9c93-db55-4a04-b1dd-522727309b4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "iso = 'PHL'"
+    "iso = 'MYS'"
    ]
   },
   {
