Misnamed this branch

--- a/notebooks/age_stratification.ipynb
+++ b/notebooks/age_stratification.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "try:\n",
     "    import google.colab\n",
-    "    ! git clone https://github.com/monash-emu/WPRO_wip.git --branch age_strat\n",
+    "    ! git clone https://github.com/monash-emu/WPRO_wip.git --branch age-strat\n",
     "    %cd WPRO_wip\n",
     "    %pip install -e ./\n",
     "except:\n",
