Get notebooks updated to loading data ove r web

--- a/notebooks/age_specific_ifr.ipynb
+++ b/notebooks/age_specific_ifr.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "### Standard preamble\n",
     "If running from Colab, \n",
-    "please uncomment and run the following three cells to get the environment set up \n",
+    "please uncomment and run the following cell to get the environment set up \n",
     "and the necessary packages installed.\n",
     "After running the first cell, you will need to \"Restart Runtime\"\n",
-    "as per the message prompt that will appear.\n",
-    "After that, proceed to run the second and third code cells below."
+    "as per the message prompt that will appear,\n",
+    "after which you can proceed to the content cells."
    ]
   },
   {
@@ -47,7 +47,7 @@
    "source": [
     "## Epidemiological explanation\n",
     "Here we take a similar epidemiological model to that presented in \n",
-    "the seir_model.ipynb notebook and apply a simple stratification to it.\n",
+    "the `seir_model.ipynb` notebook and apply a simple stratification to it.\n",
     "### Age stratification\n",
     "The stratification itself is named 'age', but does not incorporate demographic processes\n",
     "(because we only use the standard 'Stratification' object).\n",
