Revise all premables

--- a/recap/05-age-specific-ifr.ipynb
+++ b/recap/05-age-specific-ifr.ipynb
@@ -1,29 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "1fe7a30e-eefe-4e03-b915-0e320244ba26",
-   "metadata": {},
-   "source": [
-    "### Standard preamble\n",
-    "If running from Colab, \n",
-    "please uncomment and run the following cell to get the environment set up \n",
-    "and the necessary packages installed.\n",
-    "After running the first cell, you will need to \"Restart Runtime\"\n",
-    "as per the message prompt that will appear,\n",
-    "after which you can proceed to the content cells."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c8672895-7692-4c67-96c1-5728a1e42bc2",
+   "id": "c4133328-9fc8-4cca-ad50-1c35bfe82db9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip uninstall numba -y\n",
-    "# !pip uninstall librosa -y\n",
-    "# !pip install estival==0.4.9 numpy==1.24.3 kaleido"
+    "# If running from Colab, please uncomment and run the following cell to get summer installed.\n",
+    "# !pip install summerepi2==1.3.3"
    ]
   },
   {
