--- a/recap/03-hetero-mix.ipynb
+++ b/recap/03-hetero-mix.ipynb
@@ -1,29 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "d2d9c2ac-7f45-4b9a-8372-08ffc62727da",
-   "metadata": {},
-   "source": [
-    "### Standard preamble\n",
-    "If running from Colab, \n",
-    "please uncomment and run the following cells to get the environment set up \n",
-    "and the necessary packages installed.\n",
-    "After running the first cell, you will need to \"Restart Runtime\"\n",
-    "as per the message prompt that will appear,\n",
-    "after which you can proceed to the content cells."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "902adde5-a16b-466b-a5dd-e3d3a6e245de",
+   "id": "6d3438b5-f8a7-4d42-aca7-7d080b50a4d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip uninstall numba -y\n",
-    "# !pip uninstall librosa -y\n",
-    "# !pip install estival==0.4.9 numpy==1.24.3 kaleido"
+    "# If running from Colab, please uncomment and run the following cell to get summer installed.\n",
+    "# !pip install summerepi2==1.3.3"
    ]
   },
   {
