Add explanation for why we are not using explicit death flows

--- a/recap/05-age-specific-ifr.ipynb
+++ b/recap/05-age-specific-ifr.ipynb
@@ -43,6 +43,10 @@
     "with the infection fatality rate (IFR) being allowed to differ according by age group.\n",
     "Specifically, we track recoveries and multiply the rate of recovery for each stratum \n",
     "by an age-specific IFR to calculate the total rate of deaths for the population.\n",
+    "Although `summer` does have structures available to support infection-related \n",
+    "deaths being implemented as flows in which people actually exit the model,\n",
+    "here we will stick with a closed population and just track \"deaths\"\n",
+    "as a process linked to incidence.\n",
     "### Parameters\n",
     "Some additional parameters are needed here, \n",
     "including the distribution of population by age group.\n",
