Correct indexing for generation time function

--- a/semimech/clean_basics.ipynb
+++ b/semimech/clean_basics.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "def update_inc(working_vals, time, gen_time_dens, r0):\n",
-    "    return (working_vals[:time] * gen_time_dens[time-1::-1]).sum() * r0"
+    "    return (working_vals[:time] * gen_time_dens[time:0:-1]).sum() * r0"
    ]
   },
   {
