--- a/semimech/suscept_deplete.ipynb
+++ b/semimech/suscept_deplete.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "def update_inc(working_vals, time, gen_time_dens, r0):\n",
-    "    return (working_vals[:time] * gen_time_dens[time-1::-1]).sum() * r0"
+    "    return (working_vals[:time] * gen_time_dens[time:0:-1]).sum() * r0"
    ]
   },
   {
@@ -81,7 +81,7 @@
     "inc = np.zeros(times)\n",
     "inc[0] = seed\n",
     "pop = 100.0\n",
-    "suscept = pop\n",
+    "suscept = pops\n",
     "gen_time_densities = gamma.pdf(range(times), **gamma_params)\n",
     "for t in range(1, times):\n",
     "    this_inc = update_inc(inc, t, gen_time_densities, r0)\n",
