--- a/semimech/basics.ipynb
+++ b/semimech/basics.ipynb
@@ -212,7 +212,7 @@
    "outputs": [],
    "source": [
     "for t in range(1, times):\n",
-    "    inc[t] = (inc[:t] * gen_time_densities[t-1::-1]).sum() * r0"
+    "    inc[t] = (inc[:t] * gen_time_densities[t:0:-1]).sum() * r0"
    ]
   },
   {
