Use CDF intervals for generation time densities

--- a/semimech/suscept_deplete.ipynb
+++ b/semimech/suscept_deplete.ipynb
@@ -47,17 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74d7c169-c978-4bf2-98ce-c20aa39ea6d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def update_inc(working_vals, time, gen_time_dens, r0):\n",
-    "    return (working_vals[:time] * gen_time_dens[time:0:-1]).sum() * r0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
    "metadata": {},
    "outputs": [],
@@ -72,19 +61,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fe26a7ad-e2a4-43b6-9e32-2482dd84089f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generation time\n",
+    "times = 40\n",
+    "gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
+    "gen_time_densities = np.diff(gamma.cdf(range(times + 1), **gamma_params))\n",
+    "pd.Series(gen_time_densities, index=range(times)).plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "04a5bc8b-65f9-4375-ac92-f639be572dff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
-    "times = 40\n",
     "inc = np.zeros(times)\n",
     "inc[0] = seed\n",
     "pop = 100.0\n",
-    "suscept = pops\n",
-    "gen_time_densities = gamma.pdf(range(times), **gamma_params)\n",
+    "suscept = pop\n",
     "for t in range(1, times):\n",
-    "    this_inc = update_inc(inc, t, gen_time_densities, r0)\n",
+    "    this_inc = (inc[:t] * gen_time_densities[t:0:-1]).sum() * r0\n",
     "    suscept -= this_inc\n",
     "    inc[t] = this_inc * suscept / pop"
    ]
