Change to CDF intervals in all three intro notebooks

--- a/semimech/basics.ipynb
+++ b/semimech/basics.ipynb
@@ -86,7 +86,7 @@
     "req_sd = 1.5\n",
     "req_mean = 5.0\n",
     "gamma_params = get_gamma_params_from_mean_sd(req_mean, req_sd)\n",
-    "gen_time_densities = gamma.pdf(range(times), **gamma_params)"
+    "gen_time_densities = np.diff(gamma.cdf(range(times + 1), **gamma_params))"
    ]
   },
   {
