--- a/semimech/clean_basics.ipynb
+++ b/semimech/clean_basics.ipynb
@@ -96,7 +96,7 @@
     "times = 20\n",
     "inc = np.zeros(times)\n",
     "inc[0] = seed\n",
-    "gen_time_densities = gamma.pdf(range(times), **gamma_params)\n",
+    "gen_time_densities = np.diff(gamma.cdf(range(times + 1), **gamma_params))\n",
     "for t in range(1, times):\n",
     "    inc[t] = update_inc(inc, t, gen_time_densities, r0)"
    ]
