--- a/semimech/suscept_deplete.ipynb
+++ b/semimech/suscept_deplete.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "# Model parameters\n",
     "seed = 1.0\n",
-    "r0 = 2.0\n",
+    "r0 = 8.0\n",
     "gen_time_sd = 1.5\n",
     "gen_time_mean = 5.0"
    ]
@@ -75,6 +75,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "20259a7a-1f42-4dfe-b783-9e47c0481305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_time_densities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "04a5bc8b-65f9-4375-ac92-f639be572dff",
    "metadata": {},
    "outputs": [],
@@ -82,11 +92,11 @@
     "inc = np.zeros(times)\n",
     "inc[0] = seed\n",
     "pop = 100.0\n",
-    "suscept = pop\n",
+    "suscept = pop - seed\n",
     "for t in range(1, times):\n",
-    "    this_inc = (inc[:t] * gen_time_densities[t:0:-1]).sum() * r0\n",
-    "    suscept -= this_inc\n",
-    "    inc[t] = this_inc * suscept / pop"
+    "    this_inc = (inc[:t] * gen_time_densities[t-1::-1]).sum() * r0 * suscept / pop\n",
+    "    inc[t] = this_inc\n",
+    "    suscept -= this_inc"
    ]
   },
   {
