--- a/semimech/vary_r0.ipynb
+++ b/semimech/vary_r0.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "# Model parameters\n",
     "seed = 1.0\n",
-    "r0 = 2.0\n",
+    "r0 = 8.0\n",
     "gen_time_sd = 1.5\n",
     "gen_time_mean = 5.0"
    ]
@@ -88,18 +88,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04a5bc8b-65f9-4375-ac92-f639be572dff",
+   "id": "7dbaa3b5-2310-4a3b-9d7e-acbabd3d3945",
    "metadata": {},
    "outputs": [],
    "source": [
     "inc = np.zeros(times)\n",
     "inc[0] = seed\n",
     "pop = 100.0\n",
-    "suscept = pop\n",
+    "suscept = pop - seed\n",
     "for t in range(1, times):\n",
-    "    this_inc = (inc[:t] * gen_time_densities[t:0:-1] * process_model_vals[:t]).sum() \n",
-    "    suscept -= this_inc\n",
-    "    inc[t] = this_inc * suscept / pop"
+    "    this_inc = (inc[:t] * gen_time_densities[t-1::-1]).sum() * r0 * suscept / pop\n",
+    "    inc[t] = this_inc\n",
+    "    suscept -= this_inc"
    ]
   },
   {
