Clean up existing notebooks through to variable reproduction number

--- a/semimech/basics.ipynb
+++ b/semimech/basics.ipynb
@@ -20,8 +20,8 @@
     "First, ignoring strains, I'll consider:\n",
     "$\\\\i_t = (1-\\frac{n_t}{N})R_t\\sum_{\\tau<t} i_{\\tau}g_{t-\\tau}$\n",
     "\n",
-    "For now, I'll also susceptible depletion and consider:\n",
-    "$\\\\i_t = R_t\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$"
+    "For now, I'll also ignore susceptible depletion and a varying reproduction number, and so consider:\n",
+    "$\\\\i_t = R_0\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$"
    ]
   },
   {
@@ -101,16 +101,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8d4f42e-151a-4ee6-a9cd-48e0f438705a",
+   "id": "3bf8f7a5-d9a4-4724-9d67-bcc079f9a7c3",
    "metadata": {},
    "source": [
-    "Both loops in native Python, with gamma PDF calculated each time."
+    "Looping in Python, with pre-calculated generation times"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a486177-1c78-4244-9bfb-e1b707ec53b8",
+   "id": "9953951d-c3e6-4b7e-a34c-0ba04c5878b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,40 +118,7 @@
     "    val = 0\n",
     "    for tau in range(t):  # For each day preceding the day of interest\n",
     "        delay = t - tau  # The time period from each preceding day to the day of interest\n",
-    "        val += inc[tau] * gamma.pdf([delay], **gamma_params) * r0  # Increment the value for the day of interest\n",
-    "    inc[t] = val"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "946ef4a5-30c4-434e-91fb-1cb9be66dd75",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inc"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3bf8f7a5-d9a4-4724-9d67-bcc079f9a7c3",
-   "metadata": {},
-   "source": [
-    "Looping in Python, with pre-calculated generation times."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4fa77b3-1cfc-4dc4-b2ec-3e3f14e18e17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for t in range(1, times):\n",
-    "    val = 0\n",
-    "    for tau in range(t):\n",
-    "        delay = t - tau\n",
-    "        val += inc[tau] * gen_time_densities[delay] * r0\n",
+    "        val += inc[tau] * gen_time_densities[delay] * r0  # Increment the value for the day of interest\n",
     "    inc[t] = val"
    ]
   },
@@ -162,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(inc)"
+    "inc"
    ]
   },
   {
@@ -170,7 +137,7 @@
    "id": "79049f42-ea25-4774-b241-c50b36606aa7",
    "metadata": {},
    "source": [
-    "Get rid of one loop to get lists/arrays for the incidence and serial interval distribution"
+    "Get rid of one loop to get lists/arrays for the incidence and generation time distribution"
    ]
   },
   {
@@ -193,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(inc)"
+    "inc"
    ]
   },
   {
