--- a/semimech/suscept_deplete.ipynb
+++ b/semimech/suscept_deplete.ipynb
@@ -9,11 +9,9 @@
     "Again, thinking about this equation in Faria, et al:\n",
     "$\\\\i_{s,t} = (1-\\frac{n_{s,t}}{N})R_{s,t}\\sum_{\\tau<t} i_{s,\\tau}g_{t-\\tau}$\n",
     "\n",
-    "And again reducing the complexity of this by ignoring strains, I'll consider:\n",
-    "$\\\\i_t = (1-\\frac{n_t}{N})R_t\\sum_{\\tau<t} i_{\\tau}g_{t-\\tau}$\n",
-    "\n",
-    "Now aiming to include susceptible depletion and move to:\n",
-    "$\\\\i_t = R_t\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$"
+    "And again reducing the complexity of this by ignoring strains,\n",
+    "we'll now consider the equation with susceptible depletion included:\n",
+    "$\\\\i_t = (1-\\frac{n_t}{N})R_t\\sum_{\\tau<t} i_{\\tau}g_{t-\\tau}$"
    ]
   },
   {
@@ -70,16 +68,6 @@
     "gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
     "gen_time_densities = np.diff(gamma.cdf(range(times + 1), **gamma_params))\n",
     "pd.Series(gen_time_densities, index=range(times)).plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20259a7a-1f42-4dfe-b783-9e47c0481305",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gen_time_densities"
    ]
   },
   {
