--- a/semimech/vary_r0.ipynb
+++ b/semimech/vary_r0.ipynb
@@ -6,16 +6,8 @@
    "metadata": {},
    "source": [
     "## Simpler code with basics of semi-mechanistic approach\n",
-    "Again, thinking about this equation in Faria, et al:\n",
-    "$\\\\i_{s,t} = (1-\\frac{n_{s,t}}{N})R_{s,t}\\sum_{\\tau<t} i_{s,\\tau}g_{t-\\tau}$\n",
-    "\n",
-    "And again reducing the complexity of this by ignoring strains, I'll consider:\n",
-    "$\\\\i_t = (1-\\frac{n_t}{N})R_t\\sum_{\\tau<t} i_{\\tau}g_{t-\\tau}$\n",
-    "\n",
-    "Now aiming to include susceptible depletion and move to:\n",
-    "$\\\\i_t = R_t\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$\n",
-    "\n",
-    "Now also including some sort of random process (not yet a random walk, though)."
+    "Now aiming to include both susceptible depletion and a variable reproduction number, we'll target:\n",
+    "$\\\\i_t = R_t\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$"
    ]
   },
   {
@@ -55,7 +47,6 @@
    "source": [
     "# Model parameters\n",
     "seed = 1.0\n",
-    "r0 = 8.0\n",
     "gen_time_sd = 1.5\n",
     "gen_time_mean = 5.0"
    ]
@@ -80,7 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "process_vals = [2.0, 1.8, 3.0, 1.5]\n",
+    "# Variable reproduction number\n",
+    "process_vals = [2.0, 3.0, 2.0, 1.5]\n",
     "process_times = np.linspace(0.0, times, len(process_vals))\n",
     "process_model_vals = np.interp(range(times), process_times, process_vals)"
    ]
@@ -97,7 +89,7 @@
     "pop = 100.0\n",
     "suscept = pop - seed\n",
     "for t in range(1, times):\n",
-    "    this_inc = (inc[:t] * gen_time_densities[t-1::-1]).sum() * r0 * suscept / pop\n",
+    "    this_inc = (inc[:t] * gen_time_densities[t-1::-1] * process_model_vals[:t]).sum() * suscept / pop\n",
     "    inc[t] = this_inc\n",
     "    suscept -= this_inc"
    ]
