Zero out any negative values

--- a/semimech/01basics.ipynb
+++ b/semimech/01basics.ipynb
@@ -21,7 +21,11 @@
     "$\\\\i_t = (1-\\frac{n_t}{N})R_t\\sum_{\\tau<t} i_{\\tau}g_{t-\\tau}$\n",
     "\n",
     "For now, I'll also ignore susceptible depletion and a varying reproduction number, and so consider:\n",
-    "$\\\\i_t = R_0\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$"
+    "$\\\\i_t = R_0\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$\n",
+    "\n",
+    "This notebook builds up the basic code from the first principles,\n",
+    "checking with each extension that the results we are getting back are the same\n",
+    "as in the previous, more explicit version."
    ]
   },
   {
