--- a/semimech/02suscept-deplete.ipynb
+++ b/semimech/02suscept-deplete.ipynb
@@ -84,7 +84,7 @@
     "for t in range(1, times):\n",
     "    this_inc = (inc[:t] * gen_time_densities[t-1::-1]).sum() * r0 * suscept / pop\n",
     "    inc[t] = this_inc\n",
-    "    suscept -= this_inc"
+    "    suscept = max(suscept - this_inc, 0.0)"
    ]
   },
   {
