--- a/semimech/03vary-r.ipynb
+++ b/semimech/03vary-r.ipynb
@@ -91,7 +91,7 @@
     "for t in range(1, times):\n",
     "    this_inc = (inc[:t] * gen_time_densities[t-1::-1] * process_model_vals[:t]).sum() * suscept / pop\n",
     "    inc[t] = this_inc\n",
-    "    suscept -= this_inc"
+    "    suscept = max(suscept - this_inc, 0.0)"
    ]
   },
   {
