Zero out susceptibles if small negative values occur

--- a/semimech/02suscept-deplete.ipynb
+++ b/semimech/02suscept-deplete.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "# Model parameters\n",
     "seed = 1.0\n",
-    "r0 = 8.0\n",
+    "r0 = 2.0\n",
     "gen_time_sd = 1.5\n",
     "gen_time_mean = 5.0"
    ]
@@ -77,6 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The model loop\n",
     "inc = np.zeros(times)\n",
     "inc[0] = seed\n",
     "pop = 100.0\n",
