--- a/semimech/03vary-r.ipynb
+++ b/semimech/03vary-r.ipynb
@@ -72,7 +72,7 @@
    "outputs": [],
    "source": [
     "# Variable reproduction number\n",
-    "process_vals = [2.0, 3.0, 2.0, 1.5]\n",
+    "process_vals = [2.0, 2.0, 2.0, 2.0]\n",
     "process_times = np.linspace(0.0, times, len(process_vals))\n",
     "process_model_vals = np.interp(range(times), process_times, process_vals)"
    ]
@@ -84,6 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The model loop\n",
     "inc = np.zeros(times)\n",
     "inc[0] = seed\n",
     "pop = 100.0\n",
