Make model loops more explicit

--- a/semimech/02suscept-deplete.ipynb
+++ b/semimech/02suscept-deplete.ipynb
@@ -91,6 +91,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "686d7b9a-abdd-40fb-8703-4d03a422a13f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The model loop\n",
+    "inc = np.zeros(times)\n",
+    "inc[0] = seed\n",
+    "pop = 100.0\n",
+    "suscept = pop - seed\n",
+    "for t in range(1, times):\n",
+    "    suscept_prop = suscept / pop\n",
+    "    infect_contribution_by_day = inc[:t] * gen_time_densities[t-1::-1] * r0\n",
+    "    this_inc = infect_contribution_by_day.sum() * suscept_prop\n",
+    "    inc[t] = this_inc\n",
+    "    suscept = max(suscept - this_inc, 0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7c3bef00-e66b-4322-943c-093d17223be6",
    "metadata": {},
    "outputs": [],
