--- a/semimech/03vary-r.ipynb
+++ b/semimech/03vary-r.ipynb
@@ -90,7 +90,9 @@
     "pop = 100.0\n",
     "suscept = pop - seed\n",
     "for t in range(1, times):\n",
-    "    this_inc = (inc[:t] * gen_time_densities[t-1::-1] * process_model_vals[:t]).sum() * suscept / pop\n",
+    "    suscept_prop = suscept / pop\n",
+    "    infect_contribution_by_day = inc[:t] * gen_time_densities[t-1::-1] * process_model_vals[:t]\n",
+    "    this_inc = infect_contribution_by_day.sum() * suscept_prop\n",
     "    inc[t] = this_inc\n",
     "    suscept = max(suscept - this_inc, 0.0)"
    ]
