Apply time-varying R0 to time of infection

--- a/semimech/03vary-r.ipynb
+++ b/semimech/03vary-r.ipynb
@@ -72,9 +72,9 @@
    "outputs": [],
    "source": [
     "# Variable reproduction number\n",
-    "process_vals = [2.0, 1.9, 2.2, 1.5]\n",
-    "process_times = np.linspace(0.0, times, len(process_vals))\n",
-    "process_model_vals = np.interp(range(times), process_times, process_vals)"
+    "process_req = [2.0, 1.9, 2.2, 1.5]\n",
+    "process_times = np.linspace(0.0, times, len(process_req))\n",
+    "process_vals = np.interp(range(times), process_times, process_req)"
    ]
   },
   {
@@ -91,8 +91,8 @@
     "suscept = pop - seed\n",
     "for t in range(1, times):\n",
     "    suscept_prop = suscept / pop\n",
-    "    infect_contribution_by_day = inc[:t] * gen_time_densities[t-1::-1] * process_model_vals[:t]\n",
-    "    this_inc = infect_contribution_by_day.sum() * suscept_prop\n",
+    "    infect_contribution_by_day = inc[:t] * gen_time_densities[t-1::-1]\n",
+    "    this_inc = infect_contribution_by_day.sum() * suscept_prop * process_vals[t]\n",
     "    inc[t] = this_inc\n",
     "    suscept = max(suscept - this_inc, 0.0)"
    ]
