Change inc to incidence

--- a/semimech/01basics.ipynb
+++ b/semimech/01basics.ipynb
@@ -73,9 +73,9 @@
    "source": [
     "# Model parameters\n",
     "times = 20\n",
-    "inc = np.zeros(times)\n",
+    "incidence = np.zeros(times)\n",
     "seed = 1.0\n",
-    "inc[0] = seed\n",
+    "incidence[0] = seed\n",
     "r0 = 2.0"
    ]
   },
@@ -122,8 +122,8 @@
     "    val = 0\n",
     "    for tau in range(t):  # For each day preceding the day of interest\n",
     "        delay = t - tau  # The time period from each preceding day to the day of interest\n",
-    "        val += inc[tau] * gen_time_densities[delay] * r0  # Increment the value for the day of interest\n",
-    "    inc[t] = val"
+    "        val += incidence[tau] * gen_time_densities[delay] * r0  # Increment the value for the day of interest\n",
+    "    incidence[t] = val"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inc"
+    "incidence"
    ]
   },
   {
@@ -154,7 +154,7 @@
     "for t in range(1, times):\n",
     "    delays = [t - tau for tau in range(t)]\n",
     "    gammas = gen_time_densities[delays]\n",
-    "    inc[t] = (inc[:t] * gammas).sum() * r0"
+    "    incidence[t] = (incidence[:t] * gammas).sum() * r0"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inc"
+    "incidence"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "for t in range(1, times):\n",
-    "    inc[t] = (inc[:t] * gen_time_densities[t:0:-1]).sum() * r0"
+    "    incidence[t] = (incidence[:t] * gen_time_densities[t:0:-1]).sum() * r0"
    ]
   },
   {
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inc"
+    "incidence"
    ]
   },
   {
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.Series(inc).plot(labels={'index': 'day', 'value': 'incidence'})"
+    "pd.Series(incidence).plot(labels={'index': 'day', 'value': 'incidence'})"
    ]
   },
   {
