--- a/semimech/02suscept-deplete.ipynb
+++ b/semimech/02suscept-deplete.ipynb
@@ -78,13 +78,13 @@
    "outputs": [],
    "source": [
     "# The model loop\n",
-    "inc = np.zeros(times)\n",
-    "inc[0] = seed\n",
+    "incidence = np.zeros(times)\n",
+    "incidence[0] = seed\n",
     "pop = 100.0\n",
     "suscept = pop - seed\n",
     "for t in range(1, times):\n",
-    "    this_inc = (inc[:t] * gen_time_densities[t-1::-1]).sum() * r0 * suscept / pop\n",
-    "    inc[t] = this_inc\n",
+    "    this_inc = (incidence[:t] * gen_time_densities[t-1::-1]).sum() * r0 * suscept / pop\n",
+    "    incidence[t] = this_inc\n",
     "    suscept = max(suscept - this_inc, 0.0)"
    ]
   },
@@ -96,15 +96,15 @@
    "outputs": [],
    "source": [
     "# The model loop\n",
-    "inc = np.zeros(times)\n",
-    "inc[0] = seed\n",
+    "incidence = np.zeros(times)\n",
+    "incidence[0] = seed\n",
     "pop = 100.0\n",
     "suscept = pop - seed\n",
     "for t in range(1, times):\n",
     "    suscept_prop = suscept / pop\n",
-    "    infect_contribution_by_day = inc[:t] * gen_time_densities[t-1::-1] * r0\n",
+    "    infect_contribution_by_day = incidence[:t] * gen_time_densities[t-1::-1] * r0\n",
     "    this_inc = infect_contribution_by_day.sum() * suscept_prop\n",
-    "    inc[t] = this_inc\n",
+    "    incidence[t] = this_inc\n",
     "    suscept = max(suscept - this_inc, 0.0)"
    ]
   },
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.Series(inc).plot(labels={'index': 'day', 'value': 'incidence'})"
+    "pd.Series(incidence).plot(labels={'index': 'day', 'value': 'incidence'})"
    ]
   },
   {
