--- a/semimech/03vary-r.ipynb
+++ b/semimech/03vary-r.ipynb
@@ -85,15 +85,15 @@
    "outputs": [],
    "source": [
     "# The model loop\n",
-    "inc = np.zeros(times)\n",
-    "inc[0] = seed\n",
+    "incidence = np.zeros(times)\n",
+    "incidence[0] = seed\n",
     "pop = 100.0\n",
     "suscept = pop - seed\n",
     "for t in range(1, times):\n",
     "    suscept_prop = suscept / pop\n",
-    "    infect_contribution_by_day = inc[:t] * gen_time_densities[t-1::-1]\n",
+    "    infect_contribution_by_day = incidence[:t] * gen_time_densities[t-1::-1]\n",
     "    this_inc = infect_contribution_by_day.sum() * suscept_prop * process_vals[t]\n",
-    "    inc[t] = this_inc\n",
+    "    incidence[t] = this_inc\n",
     "    suscept = max(suscept - this_inc, 0.0)"
    ]
   },
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.Series(inc).plot(labels={'index': 'day', 'value': 'incidence'})"
+    "pd.Series(incidence).plot(labels={'index': 'day', 'value': 'incidence'})"
    ]
   }
  ],
