--- a/semimech/04optimise.ipynb
+++ b/semimech/04optimise.ipynb
@@ -100,18 +100,20 @@
     "    pop = 100.0\n",
     "    suscept = pop - seed\n",
     "    suscept_dict = {}\n",
+    "    r_t = {}\n",
     "    for t in range(1, times):\n",
     "        suscept_prop = suscept / pop\n",
     "        infect_contribution_by_day = incidence[:t] * gen_time_densities[t-1::-1]\n",
     "        this_inc = infect_contribution_by_day.sum() * suscept_prop * process_vals[t]\n",
+    "        r_t[t] = gen_time_densities[t-1::-1].sum() * suscept_prop * process_vals[t]\n",
     "        incidence[t] = this_inc\n",
     "        suscept = max(suscept - this_inc, 0.0)\n",
     "        suscept_dict[t] = suscept\n",
     "    incidence_df = pd.Series(incidence, index=range(times))\n",
-    "    return incidence_df, pd.Series(suscept_dict)\n",
+    "    return incidence_df, pd.Series(suscept_dict), pd.Series(r_t)\n",
     "\n",
     "def calib_func(process_req):    \n",
-    "    incidence_df, _ = model_func(process_req)\n",
+    "    incidence_df, _, _ = model_func(process_req)\n",
     "    return sum([(incidence_df[t] - d) ** 2 for t, d in dummy_data.items()])"
    ]
   },
@@ -125,7 +127,7 @@
     "result = minimize(calib_func, [1.0] * 4, method='Nelder-Mead')\n",
     "process_times = np.linspace(0.0, times, len(result.x))\n",
     "process_df = pd.Series(result.x, index=process_times)\n",
-    "optimised_df, suscept_df = model_func(result.x)"
+    "optimised_df, suscept_df, r_t = model_func(result.x)"
    ]
   },
   {
@@ -139,7 +141,8 @@
     "fig.add_trace(go.Scatter(x=dummy_data.index, y=dummy_data, mode='markers', name='targets'))\n",
     "fig.add_trace(go.Scatter(x=optimised_df.index, y=optimised_df, name='model'))\n",
     "fig.add_trace(go.Scatter(x=process_df.index, y=process_df, name='transmission potential'))\n",
-    "fig.add_trace(go.Scatter(x=suscept_df.index, y=suscept_df, name='susceptibles'), secondary_y=True)"
+    "fig.add_trace(go.Scatter(x=suscept_df.index, y=suscept_df, name='susceptibles'), secondary_y=True)\n",
+    "fig.add_trace(go.Scatter(x=r_t.index, y=r_t, name='Rt'))"
    ]
   }
  ],
