Comment and tidy optimisation notebook

--- a/semimech/04optimise.ipynb
+++ b/semimech/04optimise.ipynb
@@ -29,50 +29,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a343bc7-c944-45a2-a089-839a5699ae66",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
-    "    var = req_sd ** 2.0\n",
-    "    scale = var / req_mean\n",
-    "    a = req_mean / scale\n",
-    "    return {'a': a, 'scale': scale}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Model parameters\n",
+    "pop = 100.0\n",
     "seed = 1.0\n",
     "gen_time_sd = 1.5\n",
-    "gen_time_mean = 5.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe26a7ad-e2a4-43b6-9e32-2482dd84089f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generation time\n",
+    "gen_time_mean = 5.0\n",
     "times = 40\n",
-    "gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
-    "gen_time_densities = np.diff(gamma.cdf(range(times + 1), **gamma_params))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8fe39b91-e99d-4e06-b917-84f17a2ea3ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "model_times = range(times)\n",
     "dummy_data = pd.Series(\n",
     "    {\n",
     "        5: 1.0,\n",
@@ -88,31 +55,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fe26a7ad-e2a4-43b6-9e32-2482dd84089f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generation time\n",
+    "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
+    "    var = req_sd ** 2.0\n",
+    "    scale = var / req_mean\n",
+    "    a = req_mean / scale\n",
+    "    return {'a': a, 'scale': scale}\n",
+    "\n",
+    "gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
+    "gen_time_densities = np.diff(gamma.cdf(range(times + 1), **gamma_params))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d3299a2b-b443-45a8-aa27-a3c90e575b8e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def model_func(process_req):\n",
+    "    \"\"\"The semimechanistic process.\n",
+    "    \"\"\"\n",
     "    process_times = np.linspace(0.0, times, len(process_req))\n",
     "    process_vals = np.interp(range(times), process_times, process_req)\n",
     "    incidence = np.zeros(times)\n",
     "    incidence[0] = seed\n",
-    "    pop = 100.0\n",
-    "    suscept = pop - seed\n",
-    "    suscept_dict = {}\n",
+    "    this_suscept = pop - seed\n",
+    "    suscept = {}\n",
     "    r_t = {}\n",
     "    for t in range(1, times):\n",
-    "        suscept_prop = suscept / pop\n",
-    "        infect_contribution_by_day = incidence[:t] * gen_time_densities[t-1::-1]\n",
-    "        this_inc = infect_contribution_by_day.sum() * suscept_prop * process_vals[t]\n",
-    "        r_t[t] = gen_time_densities[t-1::-1].sum() * suscept_prop * process_vals[t]\n",
+    "        \n",
+    "        # Update outputs\n",
+    "        infect_modifier = process_vals[t] * this_suscept / pop  # Product of pre-specified process value and proportion susceptible\n",
+    "        infect_contribution_by_day = incidence[:t] * gen_time_densities[t-1::-1]  # Product of past incidence and their generation time densities\n",
+    "        this_inc = infect_contribution_by_day.sum() * infect_modifier  # Incidence\n",
+    "        this_suscept = max(this_suscept - this_inc, 0.0)  # Zero out any small negative values\n",
+    "\n",
+    "        # Store quantities of interest\n",
     "        incidence[t] = this_inc\n",
-    "        suscept = max(suscept - this_inc, 0.0)\n",
-    "        suscept_dict[t] = suscept\n",
-    "    incidence_df = pd.Series(incidence, index=range(times))\n",
-    "    return incidence_df, pd.Series(suscept_dict), pd.Series(r_t)\n",
+    "        suscept[t] = this_suscept\n",
+    "        r_t[t] = gen_time_densities[t-1::-1].sum() * infect_modifier\n",
+    "    return incidence, suscept, r_t\n",
     "\n",
     "def calib_func(process_req):    \n",
+    "    \"\"\"Get the loss function from the model.\n",
+    "    \"\"\"\n",
     "    incidence_df, _, _ = model_func(process_req)\n",
     "    return sum([(incidence_df[t] - d) ** 2 for t, d in dummy_data.items()])"
    ]
@@ -124,10 +115,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Optimise and run results through the model\n",
     "result = minimize(calib_func, [1.0] * 4, method='Nelder-Mead')\n",
     "process_times = np.linspace(0.0, times, len(result.x))\n",
     "process_df = pd.Series(result.x, index=process_times)\n",
-    "optimised_df, suscept_df, r_t = model_func(result.x)"
+    "optimised, suscept, r_t = model_func(result.x)"
    ]
   },
   {
@@ -137,11 +129,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot\n",
+    "optimised = pd.Series(optimised, index=model_times)\n",
+    "suscept = pd.Series(suscept, index=model_times)\n",
+    "r_t = pd.Series(r_t, index=model_times)\n",
     "fig = make_subplots(specs=[[{'secondary_y': True}]])\n",
     "fig.add_trace(go.Scatter(x=dummy_data.index, y=dummy_data, mode='markers', name='targets'))\n",
-    "fig.add_trace(go.Scatter(x=optimised_df.index, y=optimised_df, name='model'))\n",
+    "fig.add_trace(go.Scatter(x=optimised.index, y=optimised, name='model'))\n",
     "fig.add_trace(go.Scatter(x=process_df.index, y=process_df, name='transmission potential'))\n",
-    "fig.add_trace(go.Scatter(x=suscept_df.index, y=suscept_df, name='susceptibles'), secondary_y=True)\n",
+    "fig.add_trace(go.Scatter(x=suscept.index, y=suscept, name='susceptibles'), secondary_y=True)\n",
     "fig.add_trace(go.Scatter(x=r_t.index, y=r_t, name='Rt'))"
    ]
   }
