Change seed and population to arguments

--- a/semimech/04optimise.ipynb
+++ b/semimech/04optimise.ipynb
@@ -29,13 +29,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d3299a2b-b443-45a8-aa27-a3c90e575b8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_func(process_req, pop, seed):\n",
+    "    \"\"\"The semimechanistic process.\n",
+    "    \"\"\"\n",
+    "    process_times = np.linspace(0.0, times, len(process_req))\n",
+    "    process_vals = np.interp(range(times), process_times, process_req)\n",
+    "    incidence = np.zeros(times)\n",
+    "    incidence[0] = seed\n",
+    "    this_suscept = pop - seed\n",
+    "    suscept = {}\n",
+    "    r_t = {}\n",
+    "    for t in range(1, times):\n",
+    "        \n",
+    "        # Update outputs\n",
+    "        infect_modifier = process_vals[t] * this_suscept / pop  # Product of pre-specified process value and proportion susceptible\n",
+    "        infect_contribution_by_day = incidence[:t] * gen_time_densities[t-1::-1]  # Product of past incidence and their generation time densities\n",
+    "        this_inc = infect_contribution_by_day.sum() * infect_modifier  # Incidence\n",
+    "        this_suscept = max(this_suscept - this_inc, 0.0)  # Zero out any small negative values\n",
+    "\n",
+    "        # Store quantities of interest\n",
+    "        incidence[t] = this_inc\n",
+    "        suscept[t] = this_suscept\n",
+    "        r_t[t] = gen_time_densities[t-1::-1].sum() * infect_modifier\n",
+    "    return incidence, suscept, r_t\n",
+    "\n",
+    "def calib_func(process_req, pop, seed):    \n",
+    "    \"\"\"Get the loss function from the model.\n",
+    "    \"\"\"\n",
+    "    incidence_df, _, _ = model_func(process_req, pop, seed)\n",
+    "    return sum([(incidence_df[t] - d) ** 2 for t, d in dummy_data.items()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Model parameters\n",
-    "pop = 100.0\n",
-    "seed = 1.0\n",
+    "population = 100.0\n",
+    "infectious_seed = 1.0\n",
     "gen_time_sd = 1.5\n",
     "gen_time_mean = 5.0\n",
     "times = 40\n",
@@ -73,53 +111,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3299a2b-b443-45a8-aa27-a3c90e575b8e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def model_func(process_req):\n",
-    "    \"\"\"The semimechanistic process.\n",
-    "    \"\"\"\n",
-    "    process_times = np.linspace(0.0, times, len(process_req))\n",
-    "    process_vals = np.interp(range(times), process_times, process_req)\n",
-    "    incidence = np.zeros(times)\n",
-    "    incidence[0] = seed\n",
-    "    this_suscept = pop - seed\n",
-    "    suscept = {}\n",
-    "    r_t = {}\n",
-    "    for t in range(1, times):\n",
-    "        \n",
-    "        # Update outputs\n",
-    "        infect_modifier = process_vals[t] * this_suscept / pop  # Product of pre-specified process value and proportion susceptible\n",
-    "        infect_contribution_by_day = incidence[:t] * gen_time_densities[t-1::-1]  # Product of past incidence and their generation time densities\n",
-    "        this_inc = infect_contribution_by_day.sum() * infect_modifier  # Incidence\n",
-    "        this_suscept = max(this_suscept - this_inc, 0.0)  # Zero out any small negative values\n",
-    "\n",
-    "        # Store quantities of interest\n",
-    "        incidence[t] = this_inc\n",
-    "        suscept[t] = this_suscept\n",
-    "        r_t[t] = gen_time_densities[t-1::-1].sum() * infect_modifier\n",
-    "    return incidence, suscept, r_t\n",
-    "\n",
-    "def calib_func(process_req):    \n",
-    "    \"\"\"Get the loss function from the model.\n",
-    "    \"\"\"\n",
-    "    incidence_df, _, _ = model_func(process_req)\n",
-    "    return sum([(incidence_df[t] - d) ** 2 for t, d in dummy_data.items()])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4d852142-63be-4a0e-80fc-22aeff302b22",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Optimise and run results through the model\n",
-    "result = minimize(calib_func, [1.0] * 4, method='Nelder-Mead')\n",
+    "result = minimize(calib_func, [1.0] * 4, method='Nelder-Mead', args=(population, infectious_seed))\n",
     "process_times = np.linspace(0.0, times, len(result.x))\n",
     "process_df = pd.Series(result.x, index=process_times)\n",
-    "optimised, suscept, r_t = model_func(result.x)"
+    "optimised, suscept, r_t = model_func(result.x, population, infectious_seed)"
    ]
   },
   {
