Split parameters out within calibration function

--- a/semimech/05optimise-all-params.ipynb
+++ b/semimech/05optimise-all-params.ipynb
@@ -39,10 +39,9 @@
     "    a = req_mean / scale\n",
     "    return {'a': a, 'scale': scale}\n",
     "\n",
-    "def model_func(params, pop, seed):\n",
+    "def model_func(gen_time_mean, gen_time_sd, process_req, pop, seed):\n",
     "    \"\"\"The semimechanistic process.\n",
     "    \"\"\"\n",
-    "    gen_time_mean, gen_time_sd, *process_req = params\n",
     "    gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
     "    gen_time_densities = np.diff(gamma.cdf(range(times + 1), **gamma_params))\n",
     "    process_times = np.linspace(0.0, times, len(process_req))\n",
@@ -50,8 +49,8 @@
     "    incidence = np.zeros(times)\n",
     "    incidence[0] = seed\n",
     "    this_suscept = pop - seed\n",
-    "    suscept = {}\n",
-    "    r_t = {}\n",
+    "    suscept = []\n",
+    "    r_t = []\n",
     "    for t in range(1, times):\n",
     "        \n",
     "        # Update outputs\n",
@@ -62,14 +61,15 @@
     "\n",
     "        # Store quantities of interest\n",
     "        incidence[t] = this_inc\n",
-    "        suscept[t] = this_suscept\n",
-    "        r_t[t] = gen_time_densities[t-1::-1].sum() * infect_modifier\n",
+    "        suscept.append(this_suscept)\n",
+    "        r_t.append(gen_time_densities[t-1::-1].sum() * infect_modifier)\n",
     "    return incidence, suscept, r_t, process_vals\n",
     "\n",
     "def calib_func(params, pop, seed):    \n",
     "    \"\"\"Get the loss function from the model.\n",
     "    \"\"\"\n",
-    "    incidence_df, _, _, _ = model_func(params, pop, seed)\n",
+    "    gen_time_mean, gen_time_sd, *process_req = params\n",
+    "    incidence_df, _, _, _ = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed)\n",
     "    return sum([(incidence_df[t] - d) ** 2 for t, d in dummy_data.items()])"
    ]
   },
@@ -106,7 +106,7 @@
    "source": [
     "# Optimise and run results through the model\n",
     "result = minimize(calib_func, [5.0, 1.5] + [2.0] * 4, method='Nelder-Mead', args=(population, infectious_seed), bounds=[[5.0, 6.0]] + [[1.5, 2.0]] + [[0.0, 10.0]] * 4)\n",
-    "optimised, suscept, r_t, process_vals = model_func(result.x, population, infectious_seed)"
+    "optimised, suscept, r_t, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed)"
    ]
   },
   {
@@ -117,16 +117,13 @@
    "outputs": [],
    "source": [
     "# Plot\n",
-    "optimised = pd.Series(optimised, index=model_times)\n",
-    "suscept = pd.Series(suscept, index=model_times)\n",
-    "r_t = pd.Series(r_t, index=model_times)\n",
-    "process_df = pd.Series(process_vals, index=model_times)\n",
+    "model_times = pd.Series(model_times)\n",
     "fig = make_subplots(specs=[[{'secondary_y': True}]])\n",
     "fig.add_trace(go.Scatter(x=dummy_data.index, y=dummy_data, mode='markers', name='targets'))\n",
-    "fig.add_trace(go.Scatter(x=optimised.index, y=optimised, name='model'))\n",
-    "fig.add_trace(go.Scatter(x=process_df.index, y=process_df, name='transmission potential'))\n",
-    "fig.add_trace(go.Scatter(x=suscept.index, y=suscept, name='susceptibles'), secondary_y=True)\n",
-    "fig.add_trace(go.Scatter(x=r_t.index, y=r_t, name='Rt'))"
+    "fig.add_trace(go.Scatter(x=model_times, y=optimised, name='model'))\n",
+    "fig.add_trace(go.Scatter(x=model_times, y=process_vals, name='transmission potential'))\n",
+    "fig.add_trace(go.Scatter(x=model_times, y=suscept, name='susceptibles'), secondary_y=True)\n",
+    "fig.add_trace(go.Scatter(x=model_times, y=r_t, name='Rt'))"
    ]
   }
  ],
